# pidgin-wechat

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: ISSUE_TEMPLATE.md
purple-sys/: Cargo.toml  README.md  TODO.md  build.rs
purple-sys/src/: lib.rs  purple.rs
src/: chatroom.rs  message.rs  plugin_pointer.rs  pointer.rs  server.rs  server.rs.bk  user.rs  util.rs  wechat.rs
